<resources>
    <string name="app_name">Smear Camera</string>
    <string name="directory_name">SmearCamera</string>
    <string name="oneone">1/1</string>
    <string name="fourthree">4/3</string>
    <string name="sixteennine">16/9</string>
    <string name="shape">shape</string>
    <string name="color">Colour</string>
    <string name="size">size</string>
    <string name="text_filter_normal">normal</string>
    <string name="text_filter_meifu">meifu</string>
    <string name="text_filter_meishi">meishi</string>
    <string name="text_filter_amaro">amaro</string>
    <string name="text_filter_rise">rise</string>
    <string name="text_filter_hudson">hudson</string>
    <string name="text_filter_xproii">xproii</string>
    <string name="text_filter_sierra">sierra</string>
    <string name="text_filter_lomofi">lomofi</string>
    <string name="text_filter_early_bird">earlybird</string>
    <string name="text_filter_sutro">sutro</string>
    <string name="text_filter_toaster">toaster</string>
    <string name="text_filter_brannan">brannan</string>
    <string name="text_filter_inkwell">inkwell</string>
    <string name="text_filter_walden">walden</string>
    <string name="text_filter_hefe">hefe</string>
    <string name="text_filter_valencia">valencia</string>
    <string name="text_filter_nashville">nashville</string>
    <string name="text_filter_in1977">in1977</string>
    <string name="text_filter_lord_kelvin">lordkelvin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tow_photos">TowPhotosActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_three_photos">ThreePhotosActivity</string>
    <string name="title_activity_four_photos">FourPhotosActivity</string>
    <string name="title_activity_five_photos">FivePhotosActivity</string>
    <string name="title_activity_six_photos">SixPhotosActivity</string>
</resources>