<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.BrushFragment">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/shape"
    android:text="@string/shape"
    android:textColor="@color/white"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toStartOf="@id/circle"
    app:layout_constraintHorizontal_chainStyle="spread"/>
    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:src="@drawable/white_drawable"
        android:id="@+id/circle"
        app:layout_constraintEnd_toStartOf="@id/rectangle"
        app:layout_constraintStart_toEndOf="@id/shape"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/white"
        android:id="@+id/rectangle"
        app:layout_constraintEnd_toStartOf="@id/traingle"
        app:layout_constraintStart_toEndOf="@id/circle"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.example.smearcamera.utils.CustomTextView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:id="@+id/traingle"
        app:layout_constraintStart_toEndOf="@id/rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color"
        android:id="@+id/color"
        android:textColor="@color/white"
        android:padding="10dp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@id/shape"
        app:layout_constraintTop_toTopOf="@id/recycler_view"
        app:layout_constraintBottom_toBottomOf="@id/recycler_view"/>
<androidx.recyclerview.widget.RecyclerView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="10dp"
    app:layout_constraintTop_toBottomOf="@id/circle"
    app:layout_constraintStart_toEndOf="@id/color"
    android:id="@+id/recycler_view"
    />
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:id="@+id/size"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@id/recycler_view"
        app:layout_constraintStart_toStartOf="@id/color"
        />
    <ImageView
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:id="@+id/small"
        android:src="@drawable/white_drawable"
        app:layout_constraintStart_toStartOf="@id/circle"
        app:layout_constraintTop_toBottomOf="@id/recycler_view"/>
    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:id="@+id/medium"
        android:src="@drawable/white_drawable"
        app:layout_constraintStart_toStartOf="@id/rectangle"
        app:layout_constraintTop_toBottomOf="@id/recycler_view"/>
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/large"
        android:src="@drawable/white_drawable"
        app:layout_constraintStart_toStartOf="@id/traingle"
        app:layout_constraintEnd_toEndOf="@id/traingle"
        app:layout_constraintTop_toBottomOf="@id/recycler_view"/>


</androidx.constraintlayout.widget.ConstraintLayout>