<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
<TextView
    android:layout_width="40dp"
    android:layout_height="30dp"
    android:text="@string/oneone"
    android:padding="5dp"
    android:id="@+id/one"
    android:gravity="center"
    android:background="@drawable/green_background"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:text="@string/fourthree"
        android:id="@+id/four"
        android:padding="5dp"
        android:gravity="center"
        android:background="@drawable/gray_background"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@id/one"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:id="@+id/sixteen"
        android:gravity="center"
        android:background="@drawable/gray_background"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/sixteennine"
        android:padding="5dp"
        app:layout_constraintStart_toEndOf="@id/four"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/flash_btn"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/switch_button"/>

    <androidx.camera.view.PreviewView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".7"
        android:id="@+id/textureView"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/one"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/half_circle"
        >
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/switch_cam"
    android:layout_marginTop="50dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:src="@drawable/icon_switchcamera1"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_chainStyle="spread"
    app:layout_constraintEnd_toStartOf="@id/capture"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:id="@+id/capture"
            app:layout_constraintEnd_toStartOf="@id/card_view"
            app:layout_constraintStart_toEndOf="@id/switch_cam"
            android:src="@drawable/icon_takepictures1"/>
        <androidx.cardview.widget.CardView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:id="@+id/card_view"
            app:cardBackgroundColor="@color/green"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/capture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="25dp">
        <androidx.cardview.widget.CardView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            app:cardCornerRadius="25dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/image_view"
            />
        </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

